allow filtering by date range; refactoring