@@ -1,5 +1,6 @@
 package fintx.report;
 
+import static fintx.Fixture.UNBOUNDED;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
@@ -7,9 +8,9 @@ import fintx.JunitUtil;
 import fintx.model.*;
 import java.io.File;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -21,19 +22,27 @@ public class ReconcilerTest {
         return Stream.of(
                 arguments(
                         "ReconcilerTest/exactMatch/",
+                        UNBOUNDED,
+                        2,
                         Collections.emptyList(),
                         Collections.emptyList()),
                 arguments(
                         "ReconcilerTest/matchWithDifferentNames/",
+                        UNBOUNDED,
+                        2,
                         Collections.emptyList(),
                         Collections.emptyList()),
                 arguments(
                         "ReconcilerTest/txWithSameAmount/",
+                        UNBOUNDED,
+                        2,
                         Collections.emptyList(),
                         Collections.emptyList()),
                 arguments(
                         "ReconcilerTest/noOverlap/",
-                        Arrays.asList(
+                        UNBOUNDED,
+                        2,
+                        List.of(
                                 ImmutableFinTransaction.builder()
                                         .lineNumber(1)
                                         .date(LocalDate.of(2022, 12, 31))
@@ -46,7 +55,7 @@ public class ReconcilerTest {
                                         .placeOrProduct("item 1")
                                         .amount("7580")
                                         .build()),
-                        Arrays.asList(
+                        List.of(
                                 ImmutableFinTransaction.builder()
                                         .lineNumber(1)
                                         .date(LocalDate.of(2023, 2, 9))
@@ -61,44 +70,61 @@ public class ReconcilerTest {
                                         .build())),
                 arguments(
                         "ReconcilerTest/partialOverlap/",
-                        Arrays.asList(
+                        UNBOUNDED,
+                        2,
+                        List.of(
                                 ImmutableFinTransaction.builder()
                                         .lineNumber(2)
                                         .date(LocalDate.of(2022, 12, 30))
                                         .placeOrProduct("item 1")
                                         .amount("7580")
                                         .build()),
-                        Arrays.asList(
+                        List.of(
                                 ImmutableFinTransaction.builder()
                                         .lineNumber(2)
                                         .date(LocalDate.of(2023, 2, 3))
                                         .placeOrProduct("eon")
                                         .amount("1784")
-                                        .build())));
+                                        .build())),
+                arguments(
+                        "ReconcilerTest/partialOverlap/",
+                        ImmutableDateRange.of(
+                                Optional.of(LocalDate.of(2021, 01, 01)),
+                                Optional.of(LocalDate.of(2022, 01, 01))),
+                        0,
+                        List.of(),
+                        List.of()));
     }
 
-    @ParameterizedTest(name = "{0}")
+    @ParameterizedTest(name = "{0}, {1}")
     @MethodSource
     public void testDigest(
             final String testFolder,
+            final DateRange dateRange,
+            final int expectedNumTransactionsInDateRange,
             final List<FinTransaction> rakutenMissingFromGeneric,
             final List<FinTransaction> genericMissingFromRakuten) {
         final File rakutenFile = JunitUtil.fileForTestResource(testFolder + "rakuten.csv");
         final File genericFile = JunitUtil.fileForTestResource(testFolder + "generic.csv");
         final Reconciler reconciler = new Reconciler();
-        final Report report = reconciler.reconcile(rakutenFile, genericFile);
+        final Report report = reconciler.reconcile(rakutenFile, genericFile, dateRange);
         final Report expectedReport =
                 ImmutableReport.builder()
+                        .dateRange(dateRange)
                         .rakutenFileInfo(
                                 ImmutableFileInfo.builder()
                                         .name(rakutenFile.getPath())
                                         .numTransactions(2)
+                                        .numTransactionsInDateRange(
+                                                expectedNumTransactionsInDateRange)
                                         .missingFromOther(rakutenMissingFromGeneric)
                                         .build())
                         .genericFileInfo(
                                 ImmutableFileInfo.builder()
                                         .name(genericFile.getPath())
                                         .numTransactions(2)
+                                        .numTransactionsInDateRange(
+                                                expectedNumTransactionsInDateRange)
                                         .missingFromOther(genericMissingFromRakuten)
                                         .build())
                         .build();
